After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 685159 - chromaprint: Missing unmap buffer in transform_ip
chromaprint: Missing unmap buffer in transform_ip
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
unspecified
Other All
: Normal normal
: 1.0.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-09-30 18:55 UTC by Christophe Fergeau
Modified: 2012-09-30 19:17 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
chromaprint: Missing unmap buffer in transform_ip (1.19 KB, patch)
2012-09-30 18:55 UTC, Christophe Fergeau
committed Details | Review

Description Christophe Fergeau 2012-09-30 18:55:00 UTC
When no samples have to be processed, transform_ip exits early, but
the buffer it uses was not properly unmapped.
Comment 1 Christophe Fergeau 2012-09-30 18:55:03 UTC
Created attachment 225435 [details] [review]
chromaprint: Missing unmap buffer in transform_ip
Comment 2 Tim-Philipp Müller 2012-09-30 19:17:46 UTC
Thanks!

 commit 5e544c1556b5ae6ab61a8f0fe25a6ca3eab81887
 Author: Christophe Fergeau <cfergeau@redhat.com>
 Date:   Sun Sep 30 20:52:30 2012 +0200

    chromaprint: Missing unmap buffer in transform_ip
    
    When no samples have to be processed, transform_ip exits early, but
    the buffer it uses was not properly unmapped.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=685159