chromaprint: Missing unmap buffer in transform_ip

When no samples have to be processed, transform_ip exits early, but
the buffer it uses was not properly unmapped.

https://bugzilla.gnome.org/show_bug.cgi?id=685159